# avoutput-adaptation-layer-api

./: CMakeLists.txt  README.md
doc/: Doxyfile.in
files/pkgconfig/: avoutput-adaptation-layer-api.pc.in
include/public/: aval_api.h  aval_audio.h  aval_common.h  aval_settings.h  aval_video.h
